--- a/index.html
+++ b/index.html
@@ -499,21 +499,14 @@
 																								
 												<div class="item mix jpaper" data-year="2022">
                                                     <div class="pubmain">
-													<!--
                                                         <div class="pubassets">
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
                                                             </a>
-                                                            <a href="https://psycnet.apa.org/record/2022-05374-001" class="tooltips" title="External link" target="_blank">
+                                                            <a href="https://www.psikolog.org.tr/en/publications/yayinlar/10.31828/tpy1301996120211203m000043.pdf" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
                                                             </a>
-                                                            <a href="https://www.biorxiv.org/content/10.1101/769083v3.full.pdf" class="tooltips" title="Download" target="_blank">
-                                                                <i class="icon-cloud-download"></i>
-                                                            </a>
-															<a href="https://osf.io/x5dru/" class="tooltips" title="Data" target="_blank">
-                                                                <i class="icon-bar-chart"></i>
-                                                            </a> 
-													    </div>-->
+													    </div>
                                                         <h4 class="pubtitle">The effects of long-term intake of cocoa flavanols on cognitive functions and mood, and the physiological mechanisms underlying these effects: A literature review</h4>
                                                         <div class="pubauthor">Karataş, O., <strong>Karabay, A.</strong>, & Alıcı, T.</div>
                                                         <div class="pubcite"><span class="label label-success">Review Paper</span> Turkish Psychological Articles. (2022)</div>
