--- a/indexTR.html
+++ b/indexTR.html
@@ -477,7 +477,7 @@
 													    </div>
                                                         <h4 class="pubtitle">Concealed identity information detection with pupillometry in rapid serial visual presentation</h4>
                                                         <div class="pubauthor">Chen, I. Y., <strong>Karabay, A.</strong> Mathot, S., Bowman, H., & Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Psychophysiology. (in press)</div>
+                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Psychophysiology. (2022)</div>
                                                     </div>
                                                     <div class="pubdetails">
                                                         <h4>Abstract</h4>
@@ -497,21 +497,14 @@
 											
 												<div class="item mix jpaper" data-year="2022">
                                                     <div class="pubmain">
-													<!--
                                                         <div class="pubassets">
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
                                                             </a>
-                                                            <a href="https://psycnet.apa.org/record/2022-05374-001" class="tooltips" title="External link" target="_blank">
+                                                            <a href="https://www.psikolog.org.tr/tr/yayinlar/dergiler/1031828/tpy1301996120211203m000043.pdf" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
                                                             </a>
-                                                            <a href="https://www.biorxiv.org/content/10.1101/769083v3.full.pdf" class="tooltips" title="Download" target="_blank">
-                                                                <i class="icon-cloud-download"></i>
-                                                            </a>
-															<a href="https://osf.io/x5dru/" class="tooltips" title="Data" target="_blank">
-                                                                <i class="icon-bar-chart"></i>
-                                                            </a> 
-													    </div>-->
+													    </div>
                                                         <h4 class="pubtitle">Uzun Süreli Kakao Flavanolleri Alımının Bilişsel İşlevlere ve Duygudurumuna Etkileri ve Bu Etkilerin Altındaki Fizyolojik Mekanizmalar: Bir Derleme Çalışması</h4>
                                                         <div class="pubauthor">Karataş, O., <strong>Karabay, A.</strong>, & Alıcı, T.</div>
                                                         <div class="pubcite"><span class="label label-success">Review Paper</span> Turk Psikoloji Yazilari. (2022)</div>
