--- a/index.html
+++ b/index.html
@@ -170,7 +170,17 @@
                                             </div> 
                                         </div>
 										</div>
-										I, <b>Aytaç Karabay (1989)</b>, am a postdoctoral researcher at the University of Groningen. I studied psychology (BA) from 2007 to 2011 at Ankara University. After completing my BA studies, I worked in different positions as a psychologist for a year. Then, I started my master's in experimental psychology at the Brooklyn College-City University of New York in 2013. I worked in <a href="https://www.gc.cuny.edu/Page-Elements/Academics-Research-Centers-Initiatives/Doctoral-Programs/Psychology/Faculty-Bios/Daniel-Kurylo" target="_blank">Daniel Kurylo</a>'s animal vision lab as a lab assistant for a year and completed my master's with the thesis "Perceptual Grouping by Orientation Coherence" in September 2015. Next, I moved to the Netherlands to pursue my Ph.D. under the supervision of prof. <a href="https://www.elkanakyurek.com/" target="_blank">Elkan Akyürek</a>  at the University of Groningen. I completed my Ph.D. with the dissertation titled: "From Stimulus to Representation" which investigated how stimuli influence temporal attention and perception. I am currently working on NWO supported Open Research Area (ORA) project. We are exploring latent states of visual working memory using EEG. 
+										I, <b>Aytaç Karabay (1989)</b>, am a postdoctoral researcher at the University of Groningen. I studied psychology (BA) 
+										from 2007 to 2011 at Ankara University. After completing my BA studies, I worked in different positions as a psychologist
+										for a year. Then, I started my master's in experimental psychology at the Brooklyn College-City University of New York in
+										2013. I worked in <a href="https://www.gc.cuny.edu/Page-Elements/Academics-Research-Centers-Initiatives/Doctoral-Programs/Psychology/Faculty-Bios/Daniel-Kurylo" target="_blank">Daniel Kurylo</a>'s animal vision lab as a lab assistant for a
+										year and completed my master's with the thesis "Perceptual Grouping by Orientation Coherence" in September 2015. Next, 
+										I moved to the Netherlands to pursue my Ph.D. under the supervision of prof. <a href="https://www.elkanakyurek.com/" target="_blank">Elkan Akyürek</a>  at the University of Groningen.
+										I completed my Ph.D. with the dissertation titled: "From Stimulus to Representation" which investigated how stimuli influence
+										temporal attention and perception.I continued working in the same lab for three years for my first postdoctoral project,
+										working on NWO supported Open Research Area (ORA) project. We explored latent states of visual working memory using EEG. 
+										After my first postdoc, I joined <a href="https://sites.google.com/site/fougnielab/home" target="_blank">Daryl Fougnie</a>'s 
+										lab at New York University, Abu Dhabi campus. Our research topic covers attention and working memory functions.
 										</div>  
                                 </div>
                             </div>        
@@ -253,21 +263,21 @@
                                         <ul class="ul-dates">
 											<li>
                                                 <div class="dates">
-                                                    <span>2020</span>
+                                                    <span>2022</span>
+                                                    <span>2025</span>
+                                                </div>
+                                                <div class="content">
+                                                    <h4>Postdoctoral Researcher</h4>
+                                                    <p>New York University</p>
+                                                </div>
+                                            </li>
+											<li>
+                                                <div class="dates">
+                                                    <span>2019</span>
                                                     <span>2022</span>
                                                 </div>
                                                 <div class="content">
                                                     <h4>Postdoctoral Researcher</h4>
-                                                    <p>Rijksuniversiteit Groningen</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="dates">
-                                                    <span>2015</span>
-                                                    <span>2020</span>
-                                                </div>
-                                                <div class="content">
-                                                    <h4>PhD</h4>
                                                     <p>Rijksuniversiteit Groningen</p>
                                                 </div>
                                             </li>
@@ -1966,7 +1976,7 @@
                                             </li>-->
                                             <li>
                                                 <strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>
-                                                <span>a. karabay@ rug.nl (delete the spaces)</span>
+                                                <span>a. karabay@ nyu.edu (delete the spaces)</span>
                                             </li>
                                             <!--<li>
                                                 <strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>
@@ -1976,10 +1986,10 @@
                                                 <strong><i class="icon-skype"></i>&nbsp;&nbsp;</strong>
                                                 <span>aytac kara bay (delete the spaces)</span>
                                             </li>
-                                            <!--<li><li>
+                                            <li>
                                                 <strong><i class="icon-twitter"></i>&nbsp;&nbsp;</strong>
-                                                <span>#jenniferDoe</span>
-                                            </li>-->
+                                                <span><a href="https://twitter.com/aytckrby" target="_blank">aytckrby</a></span>
+                                            </li>
                                             <li>
                                                 <strong><i class="icon-linkedin-sign"></i>&nbsp;&nbsp;</strong>
                                                 <span><a href="https://www.linkedin.com/in/ayta%C3%A7-karabay-306252a2" target="_blank">aytackarabay</a></span>
