--- a/indexTR.html
+++ b/indexTR.html
@@ -168,7 +168,19 @@
                                             </div> 
                                          </div>
 										</div>
-                                        Ben <b>Aytaç Karabay (1989),</b> Groningen Üniversitesi’nde bilişsel nörobilim alanında doktora sonrası araştırmacı olarak çalışmaları sürdürmekteyim. 2007 ve 2011 yılları arasında Ankara Üniversitesinde psikoloji alanında lisans eğitimimi tamamladım. Lisans eğitimim bittikten sonra bir yıl kadar çeşitli kurumlarda psikolog olarak görev yaptım. 2013 yılında, yüksek lisans eğitimime Brooklyn College, CUNY’de başladım. <a href="https://www.gc.cuny.edu/Page-Elements/Academics-Research-Centers-Initiatives/Doctoral-Programs/Psychology/Faculty-Bios/Daniel-Kurylo" target="_blank">Daniel Kurylo</a>’nun görsel algıyı araştırdığı hayvan labaratuvarında gönüllü labaratuvar asistanı olarak bir yıl çalıştım ve yüksek lisansımı “Yön Uyumu ile Algısal Gruplama (Perceptual Grouping by Orientation Coherence)” tezi ile 2015 yılında tamamladım. 2015 ve 2020 yılları arasında Groningen Üniversitesinde doktoramı prof. <a href="https://www.elkanakyurek.com/" target="_blank">Elkan Akyürek</a>’in danışmanlığı altında "Uyarıcıdan İmgeye (From Stimulus to Representation)" adlı doktora tezi ile tamamladım. Şu anda NWO - Open Research Area Fonunun desteklediği doktora sonrası araştırmalarımda çalışma belleğinin gizil süreçlerini EEG aracılığı ile araştırmaktayım. 										
+                                        Ben <b>Aytaç Karabay (1989),</b> Groningen Üniversitesi’nde bilişsel nörobilim alanında doktora sonrası araştırmacı 
+										olarak çalışmaları sürdürmekteyim. 2007 ve 2011 yılları arasında Ankara Üniversitesinde psikoloji alanında lisans 
+										eğitimimi tamamladım. Lisans eğitimim bittikten sonra bir yıl kadar çeşitli kurumlarda psikolog olarak görev yaptım. 
+										2013 yılında, yüksek lisans eğitimime Brooklyn College, CUNY’de başladım.
+										<a href="https://www.gc.cuny.edu/Page-Elements/Academics-Research-Centers-Initiatives/Doctoral-Programs/Psychology/Faculty-Bios/Daniel-Kurylo" target="_blank">Daniel Kurylo</a>’nun
+										görsel algıyı araştırdığı hayvan labaratuvarında gönüllü labaratuvar asistanı olarak bir yıl çalıştım ve yüksek
+										lisansımı “Yön Uyumu ile Algısal Gruplama (Perceptual Grouping by Orientation Coherence)” tezi ile 2015 yılında tamamladım.
+										2015 ve 2020 yılları arasında Groningen Üniversitesinde doktoramı prof. 
+										<a href="https://www.elkanakyurek.com/" target="_blank">Elkan Akyürek</a>’in danışmanlığı altında "Uyarıcıdan İmgeye 
+										(From Stimulus to Representation)" adlı doktora tezi ile tamamladım. Doktoramdan sonra ilk doktora sonrası araştırmacı pozisyonumu
+										NWO - Open Research Area Fonunun desteklediği doktora sonrası araştırmalarımda çalışma belleğinin gizil süreçlerini EEG aracılığı 
+										ile araştırdım. Şu anda <a href="https://sites.google.com/site/fougnielab/home" target="_blank">Daryl Fougnie</a>’in danışmanlığında
+										doktora sonrası araştırmalarıma New York Üniversitesinde devam etmekteyim.
 										</div> 
 								</div>
                             </div>        
@@ -252,21 +264,21 @@
                                         <ul class="ul-dates">
 											<li>
                                                 <div class="dates">
-                                                    <span>2020</span>
+                                                    <span>2022</span>
+                                                    <span>2025</span>
+                                                </div>
+                                                <div class="content">
+                                                    <h4>Doktora Sonrası Araştırmacı</h4>
+                                                    <p>New York University</p>
+                                                </div>
+                                            </li>
+											<li>
+                                                <div class="dates">
+                                                    <span>2019</span>
                                                     <span>2022</span>
                                                 </div>
                                                 <div class="content">
                                                     <h4>Doktora Sonrası Araştırmacı</h4>
-                                                    <p>Rijksuniversiteit Groningen</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="dates">
-                                                    <span>2015</span>
-                                                    <span>2020</span>
-                                                </div>
-                                                <div class="content">
-                                                    <h4>Doktora</h4>
                                                     <p>Rijksuniversiteit Groningen</p>
                                                 </div>
                                             </li>
@@ -1989,26 +2001,18 @@
                                                 <strong><i class="icon-phone"></i>&nbsp;&nbsp;</strong>
                                                 <span>ofis: +31 50 36 36657</span>
                                             </li>
-                                            <!--<li>
-                                                <strong><i class="icon-phone"></i>&nbsp;&nbsp;</strong>
-                                                <span>lab: 808-808 88 88</span>
-                                            </li>-->
                                             <li>
                                                 <strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>
-                                                <span>a. karabay@ rug.nl (boşlukları siliniz)</span>
+                                                <span>a. karabay@ nyu.edu (boşlukları siliniz)</span>
                                             </li>
-                                            <!--<li>
-                                                <strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>
-                                                <span>jdoe@gmail.com</span>
-                                            </li>-->
                                             <li>
                                                 <strong><i class="icon-skype"></i>&nbsp;&nbsp;</strong>
                                                 <span>aytac kara bay (boşlukları siliniz)</span>
                                             </li>
-                                            <!--<li><li>
+                                            <li>
                                                 <strong><i class="icon-twitter"></i>&nbsp;&nbsp;</strong>
-                                                <span>#jenniferDoe</span>
-                                            </li>-->
+                                                <span><a href="https://twitter.com/aytckrby" target="_blank">aytckrby</a></span>
+                                            </li>
                                             <li>
                                                 <strong><i class="icon-linkedin-sign"></i>&nbsp;&nbsp;</strong>
                                                 <span><a href="https://www.linkedin.com/in/ayta%C3%A7-karabay-306252a2" target="_blank">aytackarabay</a></span>
