--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
                                                 <h3 class="">Aytaç Karabay, PhD</h3>
                                                 <ul class="list-unstyled">
                                                     <li>Cognitive Science</li>
-                                                    <li>Rijksuniversiteit Groningen</li>
+                                                    <li>New York University Abu Dhabi</li>
                                                 </ul>
                                             </div> 
                                         </div>
 										</div>
-										I, <b>Aytaç Karabay (1989)</b>, am a postdoctoral researcher at the University of Groningen. I studied psychology (BA) 
+										I, <b>Aytaç Karabay (1989)</b>, am a postdoctoral researcher at the New York University Abu Dhabi. I studied psychology (BA) 
 										from 2007 to 2011 at Ankara University. After completing my BA studies, I worked in different positions as a psychologist
 										for a year. Then, I started my master's in experimental psychology at the Brooklyn College-City University of New York in
 										2013. I worked in <a href="https://www.gc.cuny.edu/Page-Elements/Academics-Research-Centers-Initiatives/Doctoral-Programs/Psychology/Faculty-Bios/Daniel-Kurylo" target="_blank">Daniel Kurylo</a>'s animal vision lab as a lab assistant for a
@@ -1978,10 +1978,10 @@
                                                 <strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>
                                                 <span>a. karabay@ nyu.edu (delete the spaces)</span>
                                             </li>
-                                            <!--<li>
-                                                <strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>
+                                            <li>
+                                                <strong><i class="icon-google-plus"></i>&nbsp;&nbsp;</strong>
                                                 <span>jdoe@gmail.com</span>
-                                            </li>-->
+                                            </li>
                                             <li>
                                                 <strong><i class="icon-skype"></i>&nbsp;&nbsp;</strong>
                                                 <span>aytac kara bay (delete the spaces)</span>
