--- a/indexTR.html
+++ b/indexTR.html
@@ -163,12 +163,12 @@
                                                 <h3 class="">Aytaç Karabay, PhD</h3>
                                                 <ul class="list-unstyled">
                                                     <li>Bilişsel Psikoloji</li>
-                                                    <li>Rijksuniversiteit Groningen</li>
+                                                    <li>New York Üniversitesi Abu Dhabi</li>
                                                 </ul>
                                             </div> 
                                          </div>
 										</div>
-                                        Ben <b>Aytaç Karabay (1989),</b> Groningen Üniversitesi’nde bilişsel nörobilim alanında doktora sonrası araştırmacı 
+                                        Ben <b>Aytaç Karabay (1989),</b> New York Üniversitesi Abu Dhabi kampüsünde bilişsel nörobilim alanında doktora sonrası araştırmacı 
 										olarak çalışmaları sürdürmekteyim. 2007 ve 2011 yılları arasında Ankara Üniversitesinde psikoloji alanında lisans 
 										eğitimimi tamamladım. Lisans eğitimim bittikten sonra bir yıl kadar çeşitli kurumlarda psikolog olarak görev yaptım. 
 										2013 yılında, yüksek lisans eğitimime Brooklyn College, CUNY’de başladım.
