--- a/index.html
+++ b/index.html
@@ -306,6 +306,23 @@
                                             <h2>Honors, Awards and Grants</h2>
                                         </div>
                                         <ul class="timeline">
+										
+											<li class="open">
+                                                <div class="date">2022</div>
+                                                <div class="circle"></div>
+                                                <div class="data">
+                                                    <div class="subject">Open Research Award, Open Science Programme, University of Groningen</div>
+                                                    <div class="text row">
+                                                        <div class="col-md-2">
+                                                            <img alt="image" class="thumbnail img-responsive" src="img/personal/OPA.jpeg" >
+                                                        </div>
+                                                        <div class="col-md-10">
+                                                           Open Research award for the study ‘Concealed familiar face detection with pupillometry in rapid serial visual presentation’, by Open Science Programme, University of Groningen, Groningen, the Netherlands. 
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </li>            							
+																				
 											<li class="open">
                                                 <div class="date">2022</div>
                                                 <div class="circle"></div>
@@ -316,7 +333,7 @@
                                                             <img alt="image" class="thumbnail img-responsive" src="img/personal/WM_engram_icon.png" >
                                                         </div>
                                                         <div class="col-md-10">
-                                                           Best poster presentation award at the Searching for the Working Memory Engram workshop held in University of Groningen, Groningen, Netherlands. 
+                                                           Best poster presentation award at the Searching for the Working Memory Engram workshop held in University of Groningen, Groningen, the Netherlands. 
                                                         </div>
                                                     </div>
                                                 </div>
