--- a/indexTR.html
+++ b/indexTR.html
@@ -307,7 +307,22 @@
                                             <h2>Burslar ve Ödüller </h2>
                                         </div>
                                         <ul class="timeline">
-                                            
+                                            <li class="open">
+                                                <div class="date">2022</div>
+                                                <div class="circle"></div>
+                                                <div class="data">
+                                                    <div class="subject">Açık bilim ödülü, Open Science Programme, Groningen Üniversitesi</div>
+                                                    <div class="text row">
+                                                        <div class="col-md-2">
+                                                            <img alt="image" class="thumbnail img-responsive" src="img/personal/OPA.jpeg" >
+                                                        </div>
+                                                        <div class="col-md-10">
+                                                           ‘Concealed familiar face detection with pupillometry in rapid serial visual presentation’ çalışmamızdan dolayı Groningen Üniversitesi'nin Open Science Programme departmanı tarafından açık bilim ödülüne layık görüldüm.
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </li>    
+											
 											<li class="open">
                                                 <div class="date">2022</div>
                                                 <div class="circle"></div>
