--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                                                             </a>
 													    </div>
                                                         <h4 class="pubtitle">The effects of gamma-aminobutyric acid (GABA) on working memory and attention: A randomised, double-blind, placebo-controlled, crossover trial</h4>
-                                                        <div class="pubauthor">Altınok, A., <strong>Karabay, A.</strong>, de Jonge, J., Balta, G., & Akyürek, A.</div>
+                                                        <div class="pubauthor">Altınok, A., <strong>Karabay, A.</strong>, de Jonge, J., Balta, G., & Akyürek, E.G.</div>
                                                         <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Psychopharmacology. (in press)</div>
                                                     </div>
                                                     <div class="pubdetails">
