--- a/indexTR.html
+++ b/indexTR.html
@@ -491,13 +491,19 @@
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
                                                             </a>
-                                                            <a href="https://www.biorxiv.org/content/10.1101/2022.11.09.515792v2.full.pdf" class="tooltips" title="External link" target="_blank">
+                                                            <a href="https://journals.sagepub.com/doi/10.1177/02698811231161579" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
                                                             </a>
+															<a href="https://journals.sagepub.com/doi/pdf/10.1177/02698811231161579?download=true" class="tooltips" title="Download" target="_blank">
+                                                                <i class="icon-cloud-download"></i>
+                                                            </a>
+															<a href="https://osf.io/tqyme/" class="tooltips" title="Data" target="_blank">
+                                                                <i class="icon-bar-chart"></i>
+                                                            </a> 
 													    </div>
                                                         <h4 class="pubtitle">The effects of gamma-aminobutyric acid (GABA) on working memory and attention: A randomised, double-blind, placebo-controlled, crossover trial</h4>
                                                         <div class="pubauthor">Altınok, A., <strong>Karabay, A.</strong>, de Jonge, J., Balta, G., & Akyürek, E. G.</div>
-                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Psychopharmacology. (in press)</div>
+                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Psychopharmacology. (2023)</div>
                                                     </div>
                                                     <div class="pubdetails">
                                                         <h4>Abstract</h4>
