--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
                                                             <a href="https://psycnet.apa.org/record/2022-05374-001" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
                                                             </a>
-                                                            <a href="https://www.biorxiv.org/content/10.1101/769083v3.full.pdf" class="tooltips" title="Download" target="_blank">
+                                                            <a href="/Files/articles/Karabayetal2022JEPG.pdf" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
                                                             </a>
 															<a href="https://osf.io/x5dru/" class="tooltips" title="Data" target="_blank">
