--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                                         <div class="col-md-6">
                                             <select id="cd-dropdown" name="cd-dropdown" class="cd-select">
                                                 <option class="filter" value="all" selected>All types</option>
-                                                <option class="filter" value="jpaper">Jounal Papers</option>
+                                                <option class="filter" value="jpaper">Journal Papers</option>
                                                 <option class="filter" value="cpaper">Conference Contributions</option>
                                                 <!-- <option class="filter" value="bookchapter">Book Chapters</option>-->
                                                 <option class="filter" value="book">Books</option>
