TPD link update

--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
                                                             </a>
-                                                            <a href="https://www.psikolog.org.tr/en/publications/yayinlar/10.31828/tpy1301996120211203m000043.pdf" class="tooltips" title="External link" target="_blank">
+                                                            <a href="https://psikolog.org.tr/en/publications/magazines/1031828/tpy1301996120211203m000043.pdf" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
                                                             </a>
 													    </div>
